fix: replace List.getFirst() with get(0) for pre-Java 21 compat